--- a/apps/frontend/src/app/[lang]/globals.css
+++ b/apps/frontend/src/app/[lang]/globals.css
@@ -7,11 +7,11 @@
   --button-padding: 10px 30px;
   --padding: 10px;
 
-  --black: #393939;
+  --black: #181823;
   --gray:#969696;
   --white: #fff;
-  --main: rgb(0, 7, 131);
-  --light-main: #f9f9f9;
+  --main: #FC6736;
+  --light-main: #EFECEC;
 
   --font-xxs: 11px;
   --font-xs: 13px;
