--- a/apps/frontend/src/component/general/button/button.module.css
+++ b/apps/frontend/src/component/general/button/button.module.css
@@ -8,6 +8,7 @@
   -moz-border-radius: var(--button-radius);
   -ms-border-radius: var(--button-radius);
   -o-border-radius: var(--button-radius);
+  text-transform: uppercase;
 }
 
 .main {
