--- a/apps/frontend/src/component/custom/product/box/box.module.css
+++ b/apps/frontend/src/component/custom/product/box/box.module.css
@@ -7,6 +7,7 @@
   -o-border-radius: var(--button-radius);
   padding: var(--padding);
   color: var(--black);
+  background-color: var(--white);
 }
 .boxImage {
   position: relative;
@@ -14,7 +15,7 @@
   height: 200px;
   border: 1px solid var(--border);
   border-radius: var(--button-radius);
-  background-color: var(--light-main);
+  background-color: var(--white);
 }
 .boxImage img {
   border-radius: var(--button-radius);
