--- a/apps/frontend/src/layout/banner/banner.module.css
+++ b/apps/frontend/src/layout/banner/banner.module.css
@@ -20,9 +20,11 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+  text-align: center;
   z-index: 2;
 }
 .bannerText h1 {
+  text-transform: uppercase;
   font-size: 40px;
 }
 @media only screen and (max-width: 1200px) {
@@ -32,7 +34,7 @@
   }
 }
 @media only screen and (max-width: 900px) {
-  .anchorBanner{
+  .anchorBanner {
     flex-direction: column;
   }
 
